# Zero-Shot-Calssification

./: MLCodingExerciseZeroShot.docx  README.md  bert_api.py  core.py  postman_collection  pyproject.toml  request_response_schema.py  requirements.txt
